[gd_scene load_steps=13 format=1]

[ext_resource path="res://script/tips-trik.gd" type="Script" id=1]
[ext_resource path="res://images/Background/night-back-.png" type="Texture" id=2]
[ext_resource path="res://font/BebasNeue-48.fnt" type="BitmapFont" id=3]
[ext_resource path="res://font/BebasNeue.fnt" type="BitmapFont" id=4]
[ext_resource path="res://images/info_14.png" type="Texture" id=5]
[ext_resource path="res://images/Bahan-21_12.png" type="Texture" id=6]
[ext_resource path="res://images/info_16.png" type="Texture" id=7]
[ext_resource path="res://images/Bahan-21_13.png" type="Texture" id=8]
[ext_resource path="res://images/info_17.png" type="Texture" id=9]
[ext_resource path="res://images/Bahan-21_14.png" type="Texture" id=10]
[ext_resource path="res://images/NEW/1111_03.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]

resource/name = "cangeposition"
length = 0.75
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Panel/VBoxContainer:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 0.25, 4 ),
"update": 0,
"values": [ Vector2( 0, 97 ), Vector2( -875, 97 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "disabled_button"
}, {
"args": [  ],
"method": "enabled_button"
} ]
}

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 2.0
margin/right = 797.0
margin/bottom = 1282.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="Container"]

visibility/self_opacity = 0.75
visibility/blend_mode = 4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 286.0
margin/right = 801.0
margin/bottom = 936.0

[node name="VBoxContainer" type="HBoxContainer" parent="Container/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 7956.0
margin/bottom = 655.0
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 68

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 75.0
margin/right = 750.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 682.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Menggunakan jaket berwarna cerah saat 
malam hari"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 682.0
margin/bottom = 382.0
custom_fonts/font = ExtResource( 4 )
text = "Jaket berwarna cerah berfungsi agar pengendara lain 
dapat melihat anda dengan lebih jelas, karena keadaan 
dimalam hari yang gelap.Tidak ada salahnya 
menggunakan jaket berwarna gelap disiang hari, 
tetapi akan lebih beresiko ketika dimalam hari          "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer1" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 804.0
margin/top = 0.0
margin/right = 1604.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 63

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer1"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 63.0
margin/top = 75.0
margin/right = 750.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer1/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 687.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Bila kecepatan rendah ditikungan, 
badan berlawanan dengan arah motor"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer1/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 687.0
margin/bottom = 382.0
custom_fonts/font = ExtResource( 4 )
text = "Ketika ingin berbelok saat kecepatan rendah, miringkan 
badan berlawanan dengan motor. Saat ingin berbelok 
ke kanan, miringkan badan ke kiri begitupun sebaliknya.
Hal ini bertujuan untuk menyeimbangkan badan dan 
motor saat kecepatan rendah"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer2" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1608.0
margin/top = 0.0
margin/right = 2408.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 86

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 75.0
margin/right = 750.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer2/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 664.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Bila kecepatan tinggi ditikungan, 
badan searah dengan motor (cornering)"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer2/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 664.0
margin/bottom = 382.0
custom_fonts/font = ExtResource( 4 )
text = "Ketika ingin berbelok saat kecepatan tinggi, miringkan
 badan searah dengan motor. Saat ingin berbelok ke 
kanan, miringkanlah badan ke kanan begitupun 
sebaliknya. Hal ini bertujuan untuk membantu motor
 berbelok ketika berkecepatan tinggi"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer3" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2412.0
margin/top = 0.0
margin/right = 3162.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 70

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer3"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 75.0
margin/right = 700.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer3/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 630.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Gunakan rem belakang 
saat berkecepatan rendah"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer3/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 630.0
margin/bottom = 344.0
custom_fonts/font = ExtResource( 4 )
text = "Rem belakang akan sangat berguna saat kecepatan 
rendah, gunakan rem belakang agar motor tidak 
berhenti mendadak dan tidak hilang keseimbangan 
saat kecepatan rendah."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer4" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3166.0
margin/top = 0.0
margin/right = 3964.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer4"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 75.0
margin/right = 748.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer4/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 648.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Gunakan rem depan dan belakang 
saat saat berkecepatan tinggi"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer4/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 648.0
margin/bottom = 306.0
custom_fonts/font = ExtResource( 4 )
text = "Gunakan rem depan dan belakang saat memacu motor
 dengan kecepatan tinggi, agar motor dapat berhenti 
atau melambat dengan baikdan mulus."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer5" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3968.0
margin/top = 0.0
margin/right = 4813.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 70

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer5"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 75.0
margin/right = 795.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer5/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 725.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Memperlambat kecepatan saat lampu kuning
"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer5/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 725.0
margin/bottom = 344.0
custom_fonts/font = ExtResource( 4 )
text = "Jangan menambah kecepatan saat lampu kuning menyala,
 karena hal itu sangat berbahaya. Durasi lampu kuning 
yang sebentar dan kendaraan yang akan datang dari 
arah lain sangat beresiko tinggi."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer6" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4817.0
margin/top = 0.0
margin/right = 5592.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer6"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 75.0
margin/right = 725.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer6/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 645.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Memberi kode saat ingin mendahului
"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer6/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 645.0
margin/bottom = 344.0
custom_fonts/font = ExtResource( 4 )
text = "Alangkah baiknya jika anda ingin mendahului berikan
 tanda atau kode, dan jangan langsung mendahului.
 Berilah tanda agar pengendara yang akan didahului 
tidak kaget."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer7" type="MarginContainer" parent="Container/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5596.0
margin/top = 0.0
margin/right = 6396.0
margin/bottom = 555.0
custom_constants/margin_right = 50
custom_constants/margin_top = 75
custom_constants/margin_left = 74

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel/VBoxContainer/MarginContainer7"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 75.0
margin/right = 750.0
margin/bottom = 555.0
custom_constants/separation = 100
alignment = 0

[node name="Label" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer7/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 676.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Mendahului dari arah kanan
"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Container/Panel/VBoxContainer/MarginContainer7/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 676.0
margin/bottom = 382.0
custom_fonts/font = ExtResource( 4 )
text = "Mendahului dari kanan akan membuat pengendara yang 
didepan dapat melihat kita dengan baik,terutama 
pengendara mobil. Tidak ada salahnya mendahului
dari kiri, tetapi usahakan mendahuluidari kanan 
untuk mengurangi resiko yang tidak diinginkan"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel1" type="Panel" parent="Container"]

visibility/blend_mode = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 286.0
margin/right = 803.0
margin/bottom = 381.0

[node name="Label" type="Label" parent="Container/Panel1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 3.0
margin/right = 804.0
margin/bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Tips #1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="home" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 35.0
margin/top = 1029.0
margin/right = 193.0
margin/bottom = 1189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="prev" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 415.0
margin/top = 1027.0
margin/right = 576.0
margin/bottom = 1186.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="next" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 609.0
margin/top = 1027.0
margin/right = 768.0
margin/bottom = 1186.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cangeposition = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextureFrame 2" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 47.0
margin/top = 70.0
margin/right = 757.0
margin/bottom = 238.0
texture = ExtResource( 11 )
stretch_mode = 0

[connection signal="pressed" from="home" to="." method="_on_home_pressed"]

[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]


